new module added investment pool votes
